# fastapi-example

./: .dockerignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  prometheus.yaml  pyproject.toml
app/: main.py  metrics.py
app/database/: __init__.py  engine.py  entity.py
app/routers/: user.py
example/database/: engine.py  entity.py
migrate/: env.py
migrate/versions/: 0d000e5c9c10_创建用户表.py  6ccce31b2bcd_创建用户权限表.py
