[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "psycopg>=3.2.10",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
]

[tool.ruff]
line-length = 80